JavaFX: Remove mention of non-Gradle method